  At the moment, energy evaluation is slow (the nonbonded list
  iterates over all atom pairs), and the reciprocal part of the Ewald
  sum is not yet implemented.

- When the method view() is called on a universe object that represents a
  periodic universe, the simulation box is shown as twelve lines
  representing its edges, if VMD has been defined as PDBVIEWER.

Modifications:

- The method Universe.configuration() no longer folds the atomic coordinates
  into the central box of a periodic universe. Sometimes this is not desired,
  and when it it, it can always be achieved with an explicit call to
  Universe.foldCoordinatesIntoBox().

Improvements:

- The methods that perform calculations on normal modes now all take
  an optional argument first_mode (default: 6) that defines the first
  mode to be taken into account.

Bug fixes:

- When Configuration objects were copied, the cell parameters were not copied.
  The copy contained the cell parameters of the current configuration of the
  universe instead.

- Nonbonded list generation for periodic universes could in rare cases
  miss atom pairs inside the cutoff.

2.5.18 --> 2.5.19
=================

New features:

- PDB.PDBConfiguration contains crystallographic information read from the
  PDB file: the edge lengths of the cell (a, b, c, in units of nm), the
  unit cell angles (alpha, beta, gamma, in units of radians),
  the space group (space_group, a string), the crystallographic
  symmetry transformations corresponding to the space group
  (cs_transformations, a list of transformation objects), and the
  non-crystallographic symmetry transformations (ncs_transformations,
  a list of transformation objects). The transformations are transformed
  to Cartesian coordinates, so they can be applied directly to the
  atom positions.
  This information is available only if ScientificPython >= 2.7.5 is
  installed.

Improvements:

- Improved NumPy compatibility.
