@@ -1,8 +1,9 @@
-Amber94ForceField       Amber               Amber94ForceField
-Amber99ForceField       Amber               Amber99ForceField
-OPLSForceField          Amber               OPLSForceField
-LennardJonesForceField  LennardJonesFF      LennardJonesForceField
-DeformationForceField   DeformationFF       DeformationForceField
-CalphaForceField        CalphaFF            CalphaForceField
-SPCEForceField          SPCEFF              SPCEForceField
-HarmonicForceField      BondFF              HarmonicForceField
+Amber94ForceField             Amber          Amber94ForceField
+Amber99ForceField             Amber          Amber99ForceField
+OPLSForceField                Amber          OPLSForceField
+LennardJonesForceField        LennardJonesFF LennardJonesForceField
+DeformationForceField         DeformationFF  DeformationForceField
+CalphaForceField              CalphaFF       CalphaForceField
+SPCEForceField                SPCEFF         SPCEForceField
+HarmonicForceField            BondFF         HarmonicForceField
+AnisotropicNetworkForceField  ANMFF          AnisotropicNetworkForceField
